--- a/Advanced Math Calculator/project.json
+++ b/Advanced Math Calculator/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "CrossPieCharts.UWP": "1.0.2",
+    "InfragisticsUWP.Controls.Charts.XamDataChart": "2016.2.247",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1"
   },
   "frameworks": {
