--- a/Advanced Math Calculator/Advanced Math Calculator.csproj
+++ b/Advanced Math Calculator/Advanced Math Calculator.csproj
@@ -96,6 +96,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="binary.xaml.cs">
+      <DependentUpon>binary.xaml</DependentUpon>
+    </Compile>
     <Compile Include="functionPage.xaml.cs">
       <DependentUpon>functionPage.xaml</DependentUpon>
     </Compile>
@@ -131,6 +134,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="binary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="functionPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
